# nuno

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pre-commit-config.yaml  pyproject.toml
conf/: logger.yaml
docs/samples/: createdb.md  install_fdw.md  install_pgadmin4.md
src/nuno/: __init__.py  common.py  decorator.py  fabfile.py
src/nuno/os/: disk.py
src/nuno/postgresql/: deploy.py  ops.py
